sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:35: error: Unmatched closing brace '}' ignored here
}
^